<resources>
    <string name="app_name">SmartNotes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_login">Авторизация</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="nic_name">Ник</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="email">e-mail</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_save_new_user">Сохранить</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Не верный логин</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remind_password">Забыли пароль?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_folders">Заметки и задачи</string>
    <string name="nav_calendar">Календарь</string>
    <string name="nav_profile">Профиль</string>

    <string name="folder_name">Наименование папки</string>
    <string name="folder_desc">Описание папки</string>
    <string name="folder_isshared">Показывать папку другим пользователям?</string>
    <string name="folder_save">Сохранить</string>
</resources>